--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -87,6 +87,9 @@
     "tailwindcss-logical": "^3.0.0",
     "typescript": "^4.9.4"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "ct3aMetadata": {
     "initVersion": "6.0.0-next.e267c33"
   }
